[gd_scene load_steps=10 format=2]

[ext_resource path="res://gameplay/level/level.tscn" type="PackedScene" id=1]
[ext_resource path="res://gameplay/driller/driller.tscn" type="PackedScene" id=2]
[ext_resource path="res://gameplay/gui/score/score.tscn" type="PackedScene" id=3]
[ext_resource path="res://gameplay/main/main.gd" type="Script" id=4]
[ext_resource path="res://gameplay/gui/game_over/game_over.tscn" type="PackedScene" id=5]
[ext_resource path="res://gameplay/driller/smoke_particle.png" type="Texture" id=6]
[ext_resource path="res://gameplay/main/explosion.wav" type="AudioStream" id=7]
[ext_resource path="res://gameplay/gui/pause_menu/pause_menu.tscn" type="PackedScene" id=8]
[ext_resource path="res://gameplay/gui/pause_menu/pause_button.png" type="Texture" id=9]

[node name="main" type="Node2D"]
script = ExtResource( 4 )

[node name="level" parent="." instance=ExtResource( 1 )]
position = Vector2( 13, 0 )

[node name="driller" parent="." instance=ExtResource( 2 )]
position = Vector2( 237, 93 )
scale = Vector2( 0.5, 0.5 )

[node name="gui" type="Node" parent="."]

[node name="pause_menu" parent="gui" instance=ExtResource( 8 )]

[node name="game_over" parent="gui" instance=ExtResource( 5 )]
visible = false
mouse_filter = 1

[node name="score" parent="gui" instance=ExtResource( 3 )]

[node name="pause_button" type="TextureButton" parent="gui"]
pause_mode = 1
margin_left = 4.0
margin_top = 4.0
margin_right = 132.0
margin_bottom = 132.0
rect_scale = Vector2( 0.4, 0.4 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 9 )
texture_focused = ExtResource( 9 )

[node name="difficulty_timer" type="Timer" parent="."]
wait_time = 7.0
autostart = true

[node name="explosion" type="CPUParticles2D" parent="."]
pause_mode = 2
emitting = false
amount = 30
one_shot = true
speed_scale = 2.0
explosiveness = 1.0
randomness = 1.0
texture = ExtResource( 6 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector2( 200, 200 )
spread = 180.0
gravity = Vector2( 98, 98 )
initial_velocity = 300.0
radial_accel = 300.0
radial_accel_random = 1.0
color = Color( 0, 0, 0, 0.784314 )

[node name="explosion" type="AudioStreamPlayer" parent="explosion"]
stream = ExtResource( 7 )
bus = "sfx"

[connection signal="bomb_drilled" from="level" to="." method="_on_level_bomb_drilled"]
[connection signal="row_drilled" from="level" to="." method="_on_level_row_drilled"]
[connection signal="block_drilled" from="driller" to="level" method="_on_driller_block_drilled"]
[connection signal="pressed" from="gui/pause_button" to="." method="_on_pause_button_pressed"]
[connection signal="timeout" from="difficulty_timer" to="." method="_on_difficulty_timer_timeout"]
